--- a/style.css
+++ b/style.css
@@ -43,3 +43,10 @@ h2.title{
     transform: translateY(4px);
   }
 
+  button {
+	  margin-bottom: 20px;
+  }
+
+  :is(input, select){
+	  margin:10px;
+  }
